 Summary of important user-visible changes for SPEKcheck 0.3:
-------------------------------------------------------------

 ** Fixed display of spectrum whose raw data started below the
    displayed minimum (300nm by default).  This issue did not affect
    the efficiency computations, it only clipped the data on the plot.

 ** New detectors:

        Prime95B
        PrimeBSI

 ** New dyes:

        mRuby2

 ** New excitation sources:

        CoolLED-PE300
        Lumencor-SOLA
        X-Cite-Xylis

 ** New filters:

        AT-350-50x
        DV-ET-402-15x
        DV-ET-455-50m
        DV-ET-490-20x
        DV-ET-525-36m
        DV-ET-605-52m
        DV-ET-645-30x
        DV-ET-705-72m
        Di01-T405-488-568-647
        Di01-T442-514-647
        Di01-T488
        EM-447-60
        EM-525-45
        EM-609-54
        EM-680-42
        EX-392-23
        EX-466-40
        EX-554-23
        EX-635-18
        Em01-R405-568
        Em01-R442-514-647
        Em01-R442-647
        Em01-R488-568
        Em01-R514
        FF01-530-55
        FF409
        FF495
        FF573
        FF625
        FF652


Summary of important user-visible changes for SPEKcheck 0.2:
-------------------------------------------------------------

 ** Fixed drag and drop of filters for Chrome and Safari.

 ** Changed choice of colour for each spectra to better approximate
    the correct colour for each wavelength.

 ** Replaced the long and complex default setups with a simpler
    example setup file.  Now has a widefield quad setup, and a
    confocal with three channels.

 ** New dyes:

        Atto-594

 ** New filters:

        89100bs
        AT-305-50x
        Di01-R405-488-532-635
        EM-520-44
        EM-600-52
        EM-dual-488-561
        ET-402-15x
        ET-455-50m
        ET-490-20x
        ET-525-36m
        ET-555-25x
        ET-605-52m
        ET-645-30x
        ET-705-72m
        FF484
        FF538
        FF635
        ZT-488-561-rpc
        zt405-488-561-640

